[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Scores.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=14]
font_path = "res://assets/fonts/balloon-fight-nes-text.otf"

[sub_resource type="DynamicFont" id=15]
font_data = SubResource( 14 )

[node name="Scores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TimerShowScore" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FloatingScoreLabel" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = -54.0
margin_right = 66.0
margin_bottom = -36.0
rect_scale = Vector2( 0.5, 1.25 )
custom_colors/font_color = Color( 0.803922, 0.160784, 0.0117647, 1 )
custom_fonts/font = SubResource( 15 )
text = "500"

[connection signal="timeout" from="TimerShowScore" to="." method="_on_TimerShowScore_timeout"]
